--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,44 @@
 
     <groupId>org.jboss.aerogear</groupId>
     <artifactId>aerogear-otp-java</artifactId>
-    <version>1.0.0.M1-20121124-SNAPSHOT</version>
+    <version>1.0.0.M1</version>
     <packaging>jar</packaging>
+
+    <name>aerogear-otp-java</name>
+    <url>http://aerogear.org</url>
+
+    <parent>
+        <groupId>org.jboss</groupId>
+        <artifactId>jboss-parent</artifactId>
+        <version>6-beta-2</version>
+    </parent>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>abstractj</id>
+            <name>Bruno Oliveira</name>
+            <url>http://abstractj.org</url>
+            <email>bruno@abstractj.org</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:aerogear/aerogear-otp-java.git</connection>
+        <developerConnection>scm:git:git@github.com:aerogear/aerogear-otp-java.git</developerConnection>
+        <url>git@github.com:aerogear/aerogear-otp-java.git</url>
+    </scm>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -38,11 +74,6 @@
             <artifactId>mockito-core</artifactId>
             <version>1.9.0</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-        	<groupId>commons-codec</groupId>
-        	<artifactId>commons-codec</artifactId>
-        	<version>1.4</version>
         </dependency>
     </dependencies>
 </project>
